# Latest-Portfolio-Rust-Server

./: .env  Cargo.toml  railway.json
migrations/: 001_create_wall_messages.sql
src/: database.rs  lib.rs  main.rs  routes.rs
src/entity/: mod.rs  wall_message.rs
src/handlers/: wall.rs
