[package]
name = "portfolio_server"
version = "0.1.0"
edition = "2024"

[dependencies]
salvo = { version = "0.89", features = ["affix-state", "cors"] }
sea-orm = { version = "2.0.0-rc", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
 
tokio = { version = "1", features = ["full"] }
 
serde = { version = "1", features = ["derive"] }
serde_json = "1"
 
dotenvy = "0.15"
 
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
anyhow = "1"
